--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -24,12 +24,13 @@ $font-path: "../assets/fonts";
 // The "primary" color is the only required color in the map.
 
 $colors: (
-  primary:    #387ef5,
-  secondary:  #32db64,
+  primary:    #CDDC39,
+  secondary:  #000,
   danger:     #f53d3d,
-  light:      #f4f4f4,
-  dark:       #222
+  light:      #F0F4C3,
+  dark:       #AFB42B
 );
+
 
 
 // App iOS Variables
